@@ -16,25 +16,60 @@ do_weave( configer( is_verbatim => 1 ), 'version_t2' );
 do_weave( configer( format => "%v FOOBAZ" ), 'version_t3' );
 do_weave( configer( format => "%t%v%t-%t%m", is_verbatim => 1 ), 'version_t4' );
 
-# In order to test DateTime, we have to avoid touching the time! Hence UTC and the weird CLDR here...
-do_weave( configer( format => "%v - %{ZZZZ G}d", time_zone => 'UTC' ), 'version_t5' );
+# In order to test DateTime, we have to avoid touching the time! Hence UTC and
+# the weird CLDR here...
+do_weave(
+  configer( format => "%v - %{ZZZZ G}d", time_zone => 'UTC' ),
+  'version_t5',
+);
 
-do_weave( configer( format => ["%v", "FOOBAZ", "", "EXPLANATION"] ), 'version_t6' );
+do_weave(
+  configer( format => ["%v", "FOOBAZ", "", "EXPLANATION"] ),
+  'version_t6',
+);
+
+do_weave(
+  configer(format => [
+    "%v",
+    "FOOBAZ",
+    "",
+    "EXPLANATION",
+    "%T",
+    "%T This is a trial release.",
+  ]),
+  'version_t6',
+  'version_t6',
+);
+
+do_weave(
+  configer(format => [
+    "%v",
+    "FOOBAZ",
+    "",
+    "EXPLANATION",
+    "%T",
+    "%T This is a trial release.",
+  ]),
+  'version_t6',
+  'version_t6-trial',
+  { is_trial => 1 },
+);
 
 sub configer {
   my %opts = @_;
 
   # TODO Hmpf, is there an easier way for this? --APOCAL
   my $assembler = Pod::Weaver::Config::Assembler->new;
-  $assembler->sequence->add_section( $assembler->section_class->new({ name => '_' }) );
+  $assembler->sequence->add_section(
+    $assembler->section_class->new({ name => '_' })
+  );
   $assembler->change_section('@CorePrep');
   $assembler->change_section('Name');
   $assembler->change_section('Version');
   foreach my $k ( keys %opts ) {
     if (ref $opts{ $k }) {
       $assembler->add_value( $k => $_ ) for @{ $opts{ $k } };
-    }
-    else {
+    } else {
       $assembler->add_value( $k => $opts{ $k } );
     }
   }
@@ -45,10 +80,16 @@ sub configer {
 
 my $perl_document;
 sub do_weave {
-  my( $weaver, $filename ) = @_;
+  my( $weaver, $filename, $expect_fn, $extra ) = @_;
+  $expect_fn ||= $filename;
 
-  my $in_pod   = do { local $/; open my $fh, '<:encoding(UTF-8)', "t/eg/$filename.in.pod"; <$fh> };
-  my $expected = do { local $/; open my $fh, '<:encoding(UTF-8)', "t/eg/$filename.out.pod"; <$fh> };
+  my $in_pod   = do {
+    local $/; open my $fh, '<:encoding(UTF-8)', "t/eg/$filename.in.pod"; <$fh>;
+  };
+  my $expected = do {
+    local $/; open my $fh, '<:encoding(UTF-8)', "t/eg/$expect_fn.out.pod"; <$fh>;
+  };
+
   my $document = Pod::Elemental->read_string($in_pod);
 
   $perl_document = do { local $/; <DATA> } if ! defined $perl_document;
@@ -57,7 +98,8 @@ sub do_weave {
   my $woven = $weaver->weave_document({
     pod_document => $document,
     ppi_document => $ppi_document,
-    version  => '1.012078',
+    version      => '1.012078',
+    %{ $extra || {} },
   });
 
   # XXX: This test is extremely risky as things change upstream.
